--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.8.4",
+    "@supabase/supabase-js": "^2.38.4",
     "drizzle-orm": "^0.28.6",
     "next": "14.0.1",
     "postgres": "^3.4.2",
