--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.4",
     "@supabase/supabase-js": "^2.38.4",
+    "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "next": "14.0.1",
     "postgres": "^3.4.2",
