--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@supabase/auth-helpers-nextjs": "^0.8.4",
+    "@supabase/ssr": "^0.0.5",
     "@supabase/supabase-js": "^2.38.4",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
