--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "14.0.1",
     "postgres": "^3.4.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
