--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "postgres": "^3.4.2",
     "react": "^18",
     "react-dom": "^18",
+    "server-only": "^0.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
