--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,5 +8,13 @@
   ],
   "parserOptions": {
     "project": "./tsconfig.json"
+  },
+  "rules": {
+    /*
+    Detected default export in 'file path'. 
+    Export a named export for each HTTP method instead.
+    上記の警告が出るので、一旦offにする
+    */
+    "import/prefer-default-export": "off"
   }
 }
