--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,15 @@
 {
   "extends": [
-    "airbnb",
+    "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "airbnb-typescript",
+    "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "next/core-web-vitals",
     "prettier"
   ],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "project": "./tsconfig.json"
   },
-  "rules": {
-    /*
-    Detected default export in 'file path'. 
-    Export a named export for each HTTP method instead.
-    上記の警告が出るので、一旦offにする
-    */
-    "import/prefer-default-export": "off"
-  }
+  "plugins": ["@typescript-eslint"],
+  "root": true
 }
