--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,6 @@
     "project": "./tsconfig.json"
   },
   "plugins": ["@typescript-eslint"],
+  "ignorePatterns": ["next.config.js"],
   "root": true
 }
