--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.454.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.4",
     "@supabase/ssr": "^0.0.5",
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
