--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.3.1",
     "drizzle-orm": "^0.28.6",
     "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "postgres": "^3.4.3",
     "react": "^18",
     "react-dom": "^18",
