--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
     },
     "baseUrl": "."
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/(app)/posts/[id]/_app.ts"
+  ],
   "exclude": ["node_modules"]
 }
